[metadata]
name = separability-index
version = 0.1.0
author = 
	A. Renmin Pretell Ductram
	Scott J. Brandenberg
author_email = 
	rpretell@unr.edu
	sjbrandenberg@g.ucla.edu
description = An index to assess how separable two two-component datasets are.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RPretellD/separability-index
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	
[options]
packages = find:
python_requires = >=3.6
include_package_data = True
